maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:18: error: expected class or object definition
def keepHandOnSideWall() = {
^IslandMaze:29: error: Unmatched closing brace '}' ignored here
}
^